--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -68,6 +68,10 @@ select {
   }
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Container */
 .container {
   display: grid;
@@ -93,6 +97,9 @@ select {
   min-height: 80px;
 }
 .logo {
+  a {
+    color: $title_text;
+  }
 }
 nav.menu {
   display: flex;
@@ -101,6 +108,16 @@ nav.menu {
   gap: 20px;
   .menuItem {
     cursor: pointer;
+    a {
+      color: $title_text;
+      transition: all 0.5s ease-in-out;
+      &:hover {
+        color: #f59e0b;
+      }
+    }
+    .active {
+      color: #f59e0b;
+    }
   }
 }
 
@@ -212,6 +229,8 @@ nav.menu {
     display: flex;
     flex-direction: column;
     font-size: 14px;
+    justify-content: center;
+    flex: 1;
     h2 {
       font-size: 16px;
     }
@@ -227,6 +246,36 @@ nav.menu {
     font-size: 14px;
   }
 }
+#productSection {
+  margin: 60px 0px;
+  .productPage {
+    border: 1px solid #ddd;
+    padding: 20px;
+    .productContent {
+      display: flex;
+      align-items: center;
+      .productInfo {
+        padding: 0px 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .rating {
+          display: flex;
+          gap: 10px;
+        }
+        .btn {
+          text-align: center;
+        }
+      }
+    }
+  }
+}
+#cartSection {
+  margin: 60px 0px;
+}
+.cartPage {
+  border: 1px solid #ddd;
+}
 .cartFooter {
   padding: 20px;
 }
@@ -238,7 +287,6 @@ nav.menu {
 
 .footer {
   margin: 30px 0px;
-  text-align: center;
 }
 
 //Imports Responsive Styles
